Add test for vectorized code
Signed-off-by: Ameziane H <ameziane.hamlat@consensys.net>